# Exercises_OOP

./: CMakeLists.txt  README.md
ex1/: CMakeLists.txt
ex1/header/: classify.hpp  manage_officer.hpp
ex1/src/: main.cpp  manage_officer.cpp
ex10/: CMakeLists.txt
ex10/header/: Document.hpp
ex10/src/: Document.cpp  main.cpp
ex11/: CMakeLists.txt
ex11/header/: QL_SoPhuc.hpp  SoPhuc.hpp
ex11/src/: QL_SoPhuc.cpp  main.cpp
ex12/: CMakeLists.txt
ex12/header/: Vehicle_Classify.hpp  Vehicle_Manager.hpp
ex12/src/: Vehicle_Classify.cpp  Vehicle_Manager.cpp  main.cpp
ex13/: CMakeLists.txt
ex13/header/: Certificate.hpp  Employee_Classify.hpp  Employee_Manager.hpp
ex13/src/: Certificate.cpp  Employee_Classify.cpp  Employee_Manager.cpp  main.cpp
ex14/: CMakeLists.txt
ex14/header/: Candidate_Manager.hpp  Student_Classify.hpp
ex14/src/: Candidate_Manager.cpp  Student_Classify.cpp  main.cpp
ex15/: CMakeLists.txt
ex15/header/: Department.hpp  Result_Report.hpp  Semester.hpp  Student_Classify.hpp  University.hpp
ex15/src/: Department.cpp  Result_Report.cpp  Semester.cpp  Student_Classify.cpp  University.cpp  main.cpp
ex2/: CMakeLists.txt
ex2/header/: docs_classify.hpp  docs_manager.hpp
ex2/src/: docs_manager.cpp  main.cpp
ex3/: CMakeLists.txt
ex3/header/: student_classify.hpp  student_manager.hpp
ex3/src/: main.cpp  student_manager.cpp
ex4/: CMakeLists.txt
ex4/header/: house_hold.hpp  human.hpp  manage_residential_area.hpp
ex4/src/: house_hold.cpp  main.cpp  manage_residential_area.cpp
ex5/: CMakeLists.txt
ex5/header/: Hotel_Manager.hpp  People.hpp  Room_Classify.hpp
ex5/src/: Hotel_Manager.cpp  main.cpp
ex6/: CMakeLists.txt
ex6/header/: Class.hpp  School.hpp  Student.hpp
ex6/src/: Class.cpp  School.cpp  main.cpp
ex7/: CMakeLists.txt
ex7/header/: Teacher.hpp  Teacher_Manager.hpp
ex7/src/: Teacher.cpp  Teacher_Manager.cpp  main.cpp
ex8/: CMakeLists.txt
ex8/header/: Library_Manager.hpp  Student.hpp  Ticket.hpp
ex8/src/: Library_Manager.cpp  Student.cpp  Ticket.cpp  main.cpp
ex9/: CMakeLists.txt
ex9/header/: Receipt.hpp  Receipt_Manager.hpp
ex9/src/: Receipt.cpp  Receipt_Manager.cpp  main.cpp
